Finish Capstone Project Defense Ceremony.

--- a/web-admin-custom/skill.html
+++ b/web-admin-custom/skill.html
@@ -6,7 +6,9 @@
     <meta name="viewport"
           content="width=device-width,initial-scale=1,shrink-to-fit=no">
     <title>Skill Data Table</title>
-    <style>#loader {
+    <style>
+
+        #loader {
         transition: all .3s ease-in-out;
         opacity: 1;
         visibility: visible;
@@ -54,8 +56,13 @@
             transform: scale(1);
             opacity: 0
         }
-    }</style>
+    }
+    </style>
+
     <link href="assets/css/style.css"
+          rel="stylesheet">
+
+    <link href="ctsa-custom/ctsa.css"
           rel="stylesheet">
 </head>
 
