--- a/web-admin-custom/business-field.html
+++ b/web-admin-custom/business-field.html
@@ -6,7 +6,8 @@
     <meta name="viewport"
           content="width=device-width,initial-scale=1,shrink-to-fit=no">
     <title>Business Field Data Table</title>
-    <style>#loader {
+    <style>
+        #loader {
         transition: all .3s ease-in-out;
         opacity: 1;
         visibility: visible;
@@ -54,7 +55,9 @@
             transform: scale(1);
             opacity: 0
         }
-    }</style>
+    }
+    </style>
+
     <link href="assets/css/style.css"
           rel="stylesheet">
 </head>
@@ -118,7 +121,7 @@
         <div class="page-container">
             <div class="header navbar">
                 <div class="header-container bg-dark">
-                    <div class="nav-left title-header" >
+                    <div class="nav-left title-header">
                         <span>Career Trending Suggestion</span>
                     </div>
                     <ul class="nav-right">
